[package]
name = "wrb"
version = "0.1.0"
edition = "2021"

[dependencies]
clarity = { path = "./stacks-blockchain/clarity" }
stacks-common = { path = "./stacks-blockchain/stacks-common" }
libstackerdb = { path = "./stacks-blockchain/libstackerdb" }

dirs = "4.0.0"
lzma-rs = "0.2.0"
rand = "0.7.3"
serde = "1"
serde_derive = "1"
slog = { version = "2.5.2", features = [ "max_level_trace" ] }
slog-term = "2.6.0"
slog-json = { version = "2.3.0", optional = true }
lazy_static = "1.4"
termion = "2.0.3"

[patch.crates-io]
stacker = { git = "https://github.com/jcnelson/stacker"}

[dependencies.serde_json]
version = "1.0"
features = ["arbitrary_precision", "unbounded_depth"]

[dependencies.rusqlite]
version = "=0.24.2"
features = ["blob", "serde_json", "i128_blob", "bundled", "trace"]
