[package]
name = "wrb"
version = "0.1.0"
edition = "2021"

[dependencies]
clarity = { path = "./stacks-blockchain/clarity" }
stacks-common = { path = "./stacks-blockchain/stacks-common" }
libstackerdb = { path = "./stacks-blockchain/libstackerdb" }

dirs = "4.0.0"
lzma-rs = "0.2.0"
rand = "0.7.3"
serde = "1"
serde_derive = "1"
lazy_static = "1.4"
termion = "3.0.0"
toml = "0.8.12"
base64ct = { version = "1.6.0", features = ["alloc"] }

[patch.crates-io]
stacker = { git = "https://github.com/jcnelson/stacker"}

[dependencies.serde_json]
version = "1.0"
features = ["arbitrary_precision", "unbounded_depth"]

[dependencies.rusqlite]
version = "=0.31.0"
features = ["blob", "serde_json", "i128_blob", "bundled", "trace"]
